finished layout of help page

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -41,6 +41,7 @@ button
 @import ./pages/kinds-of-sports
 @import ./pages/subcategory
 @import ./pages/good-card
+@import ./pages/help
 @import ./common/footer
 @import ./common/_adaptive
 
