--- a/src/templates/pages/good-card.pug
+++ b/src/templates/pages/good-card.pug
@@ -94,21 +94,21 @@ block content
                                         svg(width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg")
                                             path(d="M1.83325 5.5L6.08325 9.75L13.1666 1.25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round")
                                     .good-card__benefit-text Сертификат доверия
-                            .good-card__tabs
+                            .good-card__tabs.tabs
                                 nav.good-card__nav
                                     .good-card__tabs-navbar
-                                        a.good-card__tabs-switch(href="#block01")  Описание
-                                        a.good-card__tabs-switch(href="#block02")  Задать вопрос
-                                        a.good-card__tabs-switch(href="#block03")  Отзывы
-                                        a.good-card__tabs-switch(href="#block04")  Доставка
-                                .good-card__tabs-block#block01   
+                                        a.good-card__tabs-switch.tabs__link(href="#block01")  Описание
+                                        a.good-card__tabs-switch.tabs__link(href="#block02")  Задать вопрос
+                                        a.good-card__tabs-switch.tabs__link(href="#block03")  Отзывы
+                                        a.good-card__tabs-switch.tabs__link(href="#block04")  Доставка
+                                .good-card__tabs-block.tabs__item#block01   
                                     p.good-card__tabs-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam commodi reiciendis quasi corporis quos dolorem quaerat consectetur nemo fuga, eligendi veniam sapiente quisquam
                                     p.good-card__tabs-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis labore vel error debitis commodi sint dolores quas a porro illum.
-                                .good-card__tabs-block#block02
+                                .good-card__tabs-block.tabs__item#block02
                                     p.good-card__tabs-text Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut vitae architecto error cumque exercitationem voluptatum neque magni impedit, placeat eos sit, laudantium voluptatibus enim quibusdam totam similique numquam fuga autem.
-                                .good-card__tabs-block#block03    
+                                .good-card__tabs-block.tabs__item#block03    
                                     p.good-card__tabs-text Lorem ipsum dolor sit amet consectetur adipisicing elit. At veritatis alias recusandae corrupti voluptatem quidem culpa ducimus vero modi deserunt?
-                                .good-card__tabs-block#block04    
+                                .good-card__tabs-block.tabs__item#block04    
                                     p.good-card__tabs-text Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati illo aspernatur qui? Cumque deserunt commodi mollitia dolores placeat ducimus vel consequuntur expedita esse ex! Sequi! 
 
             section.section.additional.section__slider
