--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -388,6 +388,11 @@ header._white {
 .swiper-button-next {
   right: 0; }
 
+.slider3__btn-next,
+.slider3__btn-prev {
+  width: 100%;
+  height: 100%; }
+
 .section {
   width: 100%;
   margin: 150px 0 0 0; }
@@ -800,6 +805,220 @@ header._white {
 .page-pagination__link.current {
   color: #000000; }
 
+.good-card {
+  margin: 28px 0 0 0; }
+  .good-card__content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+    margin: 65px 0 0 0; }
+  .good-card__images, .good-card__info {
+    flex: 1 1 50%; }
+  .good-card__images {
+    padding: 0 117px 0 0; }
+  .good-card__heading {
+    margin: 0 0 20px 0; }
+  .good-card__title {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 41px;
+    color: #000000;
+    margin: 0 0 5px 0; }
+  .good-card__vendore-code, .good-card__available-colors {
+    font-size: 16px;
+    line-height: 140%;
+    color: #999999; }
+  .good-card__price span {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 150%;
+    color: #000000; }
+  .good-card__add-to-cart-block {
+    margin: 20px 0 0 0; }
+  .good-card__form {
+    display: flex;
+    flex-direction: column; }
+  .good-card__form-inputs {
+    margin: 10px 0 32px 0; }
+  .good-card__label {
+    width: 25px;
+    height: 25px;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    margin: 0 13px 0 0;
+    /* стили для чекбокса, находящегося в фокусе */
+    /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */ }
+    .good-card__label input {
+      position: absolute;
+      z-index: -1;
+      opacity: 0; }
+    .good-card__label .span01,
+    .good-card__label .span02 {
+      display: inline-flex;
+      align-items: center;
+      -webkit-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none; }
+      .good-card__label .span01::before,
+      .good-card__label .span02::before {
+        content: '';
+        display: inline-block;
+        width: 25px;
+        height: 25px;
+        flex-shrink: 0;
+        flex-grow: 0;
+        border-radius: 100%;
+        background: url("/assets/images/svg/black-circle.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 100%; }
+    .good-card__label .span02::before {
+      background: url("/assets/images/svg/white-circle.svg"); }
+    .good-card__label input:not(:disabled):not(:checked) + span:hover::before {
+      box-shadow: 0px 0px 3px 3px #999999; }
+    .good-card__label input:checked + span::before {
+      box-shadow: 0px 0px 3px 3px #3D3D3D; }
+  .good-card__select-wrapper {
+    position: relative;
+    max-width: 222px;
+    width: 100%;
+    min-height: 50px; }
+  .good-card__select {
+    width: 100%;
+    border: 1px solid #000000;
+    background-color: #F9F9F9;
+    font-size: 16px;
+    line-height: 140%;
+    color: #333333;
+    padding: 16px 30px 12px 20px;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    cursor: pointer; }
+  .good-card__select-icon {
+    width: 18px;
+    height: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: auto;
+    right: 7px;
+    transform: translate(0, -50%);
+    pointer-events: none;
+    transition: all 0.3s ease 0s; }
+  .good-card__select-wrapper.icon-rotated > .good-card__select-icon {
+    transform: translate(0, -49%) rotate(180deg); }
+  .good-card__btn {
+    max-width: 213px;
+    min-height: 50px;
+    background-color: #3D3D3D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin: 15px 0 0 0; }
+  .good-card__size-table {
+    margin: 30px 0 0 0; }
+  .good-card__link-to-size-table {
+    font-size: 16px;
+    line-height: 18px;
+    -webkit-text-decoration-line: underline;
+            text-decoration-line: underline;
+    color: #333333;
+    padding: 10px;
+    margin: -10px; }
+  .good-card__benefits {
+    margin: 28px 0 0 0; }
+  .good-card__benefit {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start; }
+  .good-card__benefit-img-box {
+    margin: 0 10px 0 0; }
+  .good-card__benefit-text {
+    font-size: 16px;
+    line-height: 140%;
+    margin: 0 0 10px 0; }
+  .good-card__tabs {
+    margin: 49px 0 0 0;
+    min-height: 235px; }
+  .good-card__tabs-navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px 6px 0;
+    border-bottom: 3px solid #E7E7E7;
+    margin: 0 0 50px 0; }
+  .good-card__tabs-switch {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    position: relative;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    justify-content: flex-start;
+    background-color: transparent;
+    padding: 6px;
+    margin: -6px;
+    color: #000000;
+    border-radius: 5px; }
+    .good-card__tabs-switch:hover {
+      box-shadow: 0 0 2px 2px #3D3D3D; }
+    .good-card__tabs-switch::after {
+      content: '';
+      display: block;
+      width: calc(100% - 12px);
+      background-color: #333333;
+      height: 3px;
+      position: absolute;
+      top: 100%;
+      left: auto;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.3s ease 0s; }
+  .good-card__tabs-switch._active::after {
+    visibility: visible;
+    opacity: 1; }
+  .good-card__tabs-block {
+    display: none; }
+  .good-card__tabs-block._active {
+    display: block; }
+  .good-card__tabs-text {
+    font-size: 16px;
+    line-height: 140%;
+    color: #000000;
+    padding: 0 0 5px 0; }
+
+.slider-vertical {
+  height: 753px; }
+  .slider-vertical .swiper-button-prev,
+  .slider-vertical .swiper-button-next {
+    top: 50%;
+    display: none; }
+  .slider-vertical .swiper-button-next {
+    right: 0; }
+  .slider-vertical .swiper-button-prev {
+    left: 0; }
+
+.medium-zoom-image--opened {
+  z-index: 11; }
+
+.medium-zoom--opened .medium-zoom-overlay {
+  z-index: 10; }
+
+.additional {
+  margin: 0 0 0 0; }
+
 footer._hidden {
   display: none; }
 
@@ -1042,7 +1261,14 @@ footer._hidden {
   .header-top__logo-img {
     width: 120px; }
   .goods__items {
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); } }
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
+  .good-card {
+    margin: 15px 0 0 0; }
+    .good-card__content {
+      -moz-column-gap: 20px;
+           column-gap: 20px; }
+    .good-card__images {
+      padding: 0; } }
 
 @media screen and (max-width: 1024px) {
   .section {
@@ -1117,6 +1343,20 @@ footer._hidden {
     font-size: 42px; }
   .collection .slider4 {
     width: 1280px; }
+  .good-card__content {
+    flex-direction: column;
+    -moz-column-gap: 0;
+         column-gap: 0; }
+  .good-card__info {
+    margin: 20px 0 0 0; }
+  .good-card__images, .good-card__info {
+    flex: auto;
+    width: 100%; }
+  .slider-vertical {
+    height: auto;
+    min-height: 300px;
+    max-width: 578px;
+    width: 100%; }
   .footer-top .subscribe {
     margin: 70px 0; }
     .footer-top .subscribe__form {
@@ -1156,7 +1396,10 @@ footer._hidden {
   .page-pagination__nav {
     grid-column-start: 2; }
   .page-pagination__link-btn {
-    grid-column-start: 3; } }
+    grid-column-start: 3; }
+  .slider-vertical .swiper-button-prev,
+  .slider-vertical .swiper-button-next {
+    display: block; } }
 
 @media screen and (max-width: 768px) {
   .sub-menu__list {
@@ -1191,7 +1434,11 @@ footer._hidden {
     display: flex;
     flex-direction: column; }
   .page-pagination__nav {
-    margin: 0 0 20px 0; } }
+    margin: 0 0 20px 0; }
+  .good-card {
+    margin: 15px 0 0 0; }
+    .good-card__content {
+      margin: 20px 0 0 0; } }
 
 @media screen and (max-width: 640px) {
   .container {
@@ -1257,7 +1504,29 @@ footer._hidden {
     max-width: 100%; }
   .goods__img-box {
     max-width: 100%;
-    max-height: unset; } }
+    max-height: unset; }
+  .slider-vertical {
+    max-width: 610px; }
+  .good-card__title {
+    font-size: 24px; }
+  .good-card__tabs {
+    margin: 20px 0 0 0; }
+  .good-card__nav {
+    overflow-x: auto;
+    height: 65px;
+    padding: 5px 0 0 0; }
+  .good-card__tabs-navbar {
+    margin: 0 0 20px 0;
+    padding: 6px 0 6px 5px;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content; }
+  .good-card__tabs-switch {
+    font-size: 16px;
+    min-width: -webkit-max-content;
+    min-width: -moz-max-content;
+    min-width: max-content;
+    margin: -6px 10px -6px 0; } }
 
 @media screen and (max-width: 425px) {
   .footer-top .subscribe__input-block {
