--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -42,6 +42,7 @@ button
 @import ./pages/subcategory
 @import ./pages/good-card
 @import ./pages/help
+@import ./pages/contacts
 @import ./common/footer
 @import ./common/_adaptive
 
