--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -34,6 +34,10 @@
         &__tabs-items
             flex: 0 0 485px
 
+    // contacts page
+    .contacts
+        margin: 15px 0 0 0
+
 @media screen and (max-width: 1024px)
     .section
         margin: 70px 0 0 0
@@ -171,6 +175,10 @@
             flex: auto
             width: 100%
 
+    // contacts page
+    .contacts
+        margin: 15px 0 0 0
+
     // footer
     .footer-top
         .subscribe
@@ -255,6 +263,10 @@
             font-size: $text-font-size-fablet
         &__tabs-text
             font-size: $text-font-size-mobile
+
+    // contacts page
+    .contacts
+        margin: 15px 0 0 0
 
     //footer
     .footer-top
