--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -16,6 +16,8 @@ html
 		link(rel="stylesheet" type="text/css" href="assets/styles/swiper-bundle.min.css")
 		link(rel="stylesheet" type="text/css" href="assets/styles/accordion.min.css")
 		link(rel="stylesheet" type="text/css" href="assets/styles/app.css")
+		script(src="https://api-maps.yandex.ru/2.1/?apikey=aaf0ec15-8970-4357-b2ef-1c76ab7adb11&lang=ru_RU")
+
 
 	body
 		include components/header.pug
@@ -41,5 +43,6 @@ html
 
 		//- https://github.com/WICG/focus-visible
 		script(src="assets/scripts/focus-visible.min.js")
-
+		
 		script(src="assets/scripts/main.js")
+		
