--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -43,6 +43,7 @@ button
 @import ./pages/good-card
 @import ./pages/help
 @import ./pages/contacts
+@import ./pages/my-data
 @import ./common/footer
 @import ./common/_adaptive
 
