--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -29,7 +29,8 @@ $color-Gray_1: #7A7A7A
 $color-Gray_2: #D6D6D6
 $color-Gray_3: #999999
 $color-Gray_4: #F9F9F9
-$color-Gray_5: #E7E7E7
+$color-Gray_5: #f5f5f5
+$color-Gray-bonus-box: #EDEEF0
 $color-Gray-pagination: #A3A3A3
 $color-breadcrumbs: #515151
 
